--- a/src/main/resources/static/assets/css/admin/banner.css
+++ b/src/main/resources/static/assets/css/admin/banner.css
@@ -7,6 +7,11 @@
     height: 100% !important;
 }
 
+.bannerPreview {
+    width: 100%;
+    height: 145px !important;
+}
+
 .bannerInputCell {
     text-align: start !important;
     height: 100% !important;
