--- a/src/main/resources/templates/admin/banner/list.html
+++ b/src/main/resources/templates/admin/banner/list.html
@@ -16,7 +16,7 @@
                         <div class="header-wrap">
                             <table>
                                 <tbody class="bannerTableBody">
-                                    <!-- <tr class="bannerRows">
+                                    <tr class="bannerRows">
                                         <td class="bannerPreviewCell">
                                             <img class="bannerPreview"/>
                                         </td>
@@ -26,7 +26,7 @@
                                             <br/>
                                             <input type="text" class="bannerUrlInput" />
                                         </td>
-                                    </tr> -->
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
