배너 엄로드(임시)

--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -45,7 +45,7 @@
                 <a href="#none" class="js-dropdown__btn" role="button" data-category="board">게시판 관리</a>
                 <ul class="nav-sub js-dropdown__cont">
                     <li class=""><a th:href="@{/admin/manage/notice/list}" data-category="notice">공지사항</a></li>
-                    <li class=""><a th:href="@{/admin/manage/event/list}" data-category="event">이벤트</a></li>
+                    <!-- <li class=""><a th:href="@{/admin/manage/event/list}" data-category="event">이벤트</a></li> -->
                 </ul>
             </li>
 
