[관리자페이지] 지역, 업무분야 가격설정 페이지 수정하기 개발중

--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -19,6 +19,7 @@
                 <ul class="nav-sub js-dropdown__cont">
                     <li class=""><a th:href="@{/admin/manage/company/list}" data-category="list">업체 목록</a></li>
                     <li class=""><a th:href="@{/admin/manage/companysHiddencam/list}" data-category="hiddencam">몰래카메라 업체</a></li>
+                    <li class=""><a th:href="@{/admin/manage/price/list}" data-category="price">금액 관리</a></li>
                     <li class=""><a th:href="@{/admin/manage/company/premium}" data-category="ad">광고 관리</a></li>
                     <li class=""><a th:href="@{/admin/manage/company/chart}" data-category="chart">통계 관리</a></li>
                 </ul>
