관리자 페이지 지역, 분야 요금조정 완료

--- a/src/main/resources/templates/admin/price/list.html
+++ b/src/main/resources/templates/admin/price/list.html
@@ -77,8 +77,11 @@
     <script>
         window.addEventListener('DOMContentLoaded', () => {
             // highlightMenu('list');
+            removeRegionItem();
             addRegionItem();
             modifyRegion();
+
+            removeCategoryItem();
             addCategoryItem();
             modifyCategory();
         });
