--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -8,7 +8,7 @@
         <ul class="js-dropdown__cont">
             <li><a th:href="@{/admin/manage/info}">마이페이지</a></li>
             <li th:if="${#authentication.name} eq 'admin'"><a th:href="@{/admin/manage/list}">관리자 관리</a></li>
-            <li><a th:href="@{/logout}">로그아웃</a></li>
+            <li><a th:href="@{/admin/sign/signOut}">로그아웃</a></li>
         </ul>
     </nav>
 </header>
