--- a/src/main/resources/templates/admin/company/details.html
+++ b/src/main/resources/templates/admin/company/details.html
@@ -484,7 +484,7 @@
     </div>
 
     <div class="modal modal-form" data-modal="form" th:if="${details.companysFlagIdx} eq 0">
-        <div class="modal__inner">
+        <div id="localPremiumModal" class="modal__inner">
             <div class="modal-head">
                 <span class="modal__title">마패 신청서</span>
                 <a class="modal-cross js-modalClose"></a>
@@ -527,7 +527,7 @@
                             <tr>
                                 <td class="modal-th">광고 분야</td>
                                 <td class="modal-td">
-                                    <div class="checkbox-wrap">
+                                    <div id="localCategory" class="checkbox-wrap">
                                         <!-- <div class="dt-check-wrap">
                                             <input type="checkbox" id="f-category1" name="f-category" value="가정문제">
                                             <label for="f-category1">가정문제</label>
@@ -585,11 +585,11 @@
                             </tr>
                             <tr>
                                 <td class="modal-th">금액</td>
-                                <td class="modal-td f-price">0 원</td>
+                                <td id="localPremiumTotalPrice" class="modal-td f-price">0 원</td>
                             </tr>
                             <tr>
                                 <td class="modal-th">계좌번호</td>
-                                <td class="modal-td f-bank" th:text="|(${details.companysBankName}) ${details.companysBankNumber}|"></td>
+                                <td id="localPremiumBank" class="modal-td f-bank" th:text="|(${details.companysBankName}) ${details.companysBankNumber}|"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -611,9 +611,98 @@
     <script src="https://unpkg.com/quill-image-compress@1.2.11/dist/quill.imageCompressor.min.js"></script>
     <script th:src="@{/assets/js/admin/library.js}"></script>
     <script>
+        // 합산 금액
+        let totalCount = 0;
+        const localPremiumTotalPrice = document.querySelector("#localPremiumTotalPrice");
+        // 마패 신청서 광고 지역, 광고 분야, 계좌번호 정보 불러오기
+        const selectFlagPrice = async() => {
+                const region05 = document.querySelector("#region05");
+                const categoryDiv = document.querySelector("#localCategory");
+                const localPremiumBank = document.querySelector("#localPremiumBank");
+                
+                let price;
+                let region;
+                let category;
+                await fetch(`/admin/manage/price/selectPrice`)
+                    .then(response => response.json())
+                    .then(data => {
+                        price = data.price;
+                        region = data.region;
+                        category = data.category;
+                    })
+                
+                for(let i = 0; i < region.length; i++) {
+                    const optionRegionElement = document.createElement("option");
+                    optionRegionElement.innerHTML = region[i].regionName;
+                    optionRegionElement.setAttribute("onclick", "region05OptionsClick(event)");
+                    optionRegionElement.setAttribute("value", region[i].regionPrice);
+                    region05.appendChild(optionRegionElement);
+                }
+
+                for(let i = 0; i < category.length; i++) {
+                    const divCategoryElement = document.createElement("div");
+                    divCategoryElement.setAttribute("class", "dt-check-wrap");
+                    
+                    const inputCheckboxElement = document.createElement("input");
+                    inputCheckboxElement.setAttribute("type", "checkbox");
+                    inputCheckboxElement.setAttribute("id", `f-category${i+1}`);
+                    inputCheckboxElement.setAttribute("class", "localPremiumCategoryCheck");
+                    inputCheckboxElement.setAttribute("name", "f-category");
+                    inputCheckboxElement.setAttribute("value", category[i].categoryPrice);
+
+                    const labelElement = document.createElement("label");
+                    labelElement.setAttribute("for", `f-category${i+1}`);
+                    labelElement.setAttribute("class", "localPremiumCategoryCheckLabel");
+                    labelElement.setAttribute("onclick", `countFlagPrice(event)`);
+                    labelElement.innerHTML = category[i].categoryName;
+
+                    divCategoryElement.appendChild(inputCheckboxElement);
+                    divCategoryElement.appendChild(labelElement);
+
+                    categoryDiv.appendChild(divCategoryElement);                  
+                }
+
+            localPremiumBank.innerHTML = `(${price.bankName}) ${price.bankNumber}`;
+        }
+
+        const region05OptionsClick = (event) => {
+            // alert(event.target.value);
+            // alert(document.querySelector("#region05").value);
+            const region05Select = document.querySelector("#region05");
+            // region05Select.addEventListener("change", (e) => {
+            //     alert(e.target.value);
+            // })
+            
+            // let p = event.target.value;            
+            // totalCount = Number(totalCount) + Number(p);
+            // localPremiumTotalPrice.innerHTML = totalCount;
+        }
+
+        // 마패 금액 적용
+        const countFlagPrice = () => {
+            const localPremiumModal = document.querySelector("#localPremiumModal");
+            const localPremiumCategoryCheck = document.querySelectorAll(".localPremiumCategoryCheck");
+            const localPremiumCategoryCheckLabel = document.querySelectorAll(".localPremiumCategoryCheckLabel");
+
+            for(let i = 0; i < localPremiumCategoryCheck.length; i++) {
+                localPremiumCategoryCheck[i].addEventListener("click", () => {
+                    if(localPremiumCategoryCheck[i].checked === true) {
+                        totalCount = Number(totalCount) + Number(localPremiumCategoryCheck[i].value);
+                        localPremiumTotalPrice.innerHTML = totalCount;
+                    } else {
+                        totalCount = Number(totalCount) - Number(localPremiumCategoryCheck[i].value);
+                        localPremiumTotalPrice.innerHTML = totalCount;
+                    }
+                    
+                })
+            }           
+        }            
+    </script>
+    <script>
         window.addEventListener('load', function () {
             highlightMenu('list');
-            onlyNum();
+            onlyNum();            
+            selectFlagPrice();
 
             const editorWrap = document.querySelectorAll('.e-wrap');
             setTimeout(e => {
@@ -680,37 +769,12 @@
 
             // 프리미엄 해지
             const canPremium = document.querySelector('.cancel-premium');
-            if (canPremium != null) canPremium.addEventListener('click', cancelPremium);
-
-            // 마패 신청서 광고 지역, 광고 분야, 계좌번호 정보 불러오기
-            const selectFlagPrice = async() => {
-                const region05 = document.querySelector("#region05");
-                const optionElement = document.createElement("option");
-                
-                let price;
-                let region;
-                let category;
-                await fetch(`/admin/manage/price/selectPrice`)
-                    .then(response => response.json())
-                    .then(data => {
-                        price = data.price;
-                        region = data.region;
-                        category = data.category;
-                    })
-                
-                for(let i = 0; i < region.length; i++) {
-                    const optionRegionElement = document.createElement("option");
-                    optionRegionElement.innerHTML = region[i].regionName;
-                    optionRegionElement.setAttribute("value", region[i].regionPrice);
-                    region05.appendChild(optionRegionElement);
-                }
-            }
-
+            if (canPremium != null) canPremium.addEventListener('click', cancelPremium);            
+            
             // 마패 신청
             const reqFlag = document.querySelector('.request-flag');
             if (reqFlag != null) {
                 reqFlag.addEventListener('click', requestFlag);
-                selectFlagPrice()
             }
 
             // 마패 등록
